plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.smartsense.gaiax'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://repo.danubetech.com/repository/maven-public' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation('org.springframework.boot:spring-boot-starter-validation')
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.2'
    implementation 'org.liquibase:liquibase-core'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation group: 'com.amazonaws', name: 'aws-java-sdk-route53', version: '1.12.440'
    implementation group: 'com.github.jsonld-java', name: 'jsonld-java', version: '0.13.4'
    implementation group: 'io.vertx', name: 'vertx-web-client', version: '4.4.1'
    implementation group: 'io.vertx', name: 'vertx-config', version: '4.4.1'
    implementation group: 'io.vertx', name: 'vertx-config-yaml', version: '4.4.1'
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.31'
    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.70'
    implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.70'

    // for SSL
    implementation group: 'org.shredzone.acme4j', name: 'acme4j-client', version: '2.16'
    implementation group: 'org.shredzone.acme4j', name: 'acme4j-utils', version: '2.16'

    //JSON LD
    implementation('decentralized-identity:jsonld-common-java:1.0.0')

    implementation("org.springframework.boot:spring-boot-starter-quartz")

    implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.441'

    implementation 'io.kubernetes:client-java:18.0.0'

    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '4.0.2'

    implementation group: 'org.json', name: 'json', version: '20230227'


}

tasks.named('test') {
    useJUnitPlatform()
}
